# marshal

./: .gitignore  .gitmodules  Cargo.toml
marshal/: Cargo.toml
marshal-benchmark/: Cargo.toml
marshal-benchmark/benches/: bench.rs
marshal-benchmark/src/: lib.rs
marshal-bin/: Cargo.toml
marshal-bin/src/: bin_object.rs  lib.rs  test.rs  to_from_vu128.rs  util.rs
marshal-bin/src/decode/: full.rs  mod.rs
marshal-bin/src/encode/: full.rs  mod.rs
marshal-bin/src/read/: full.rs  mod.rs
marshal-bin/src/write/: full.rs  mod.rs
marshal-core/: Cargo.toml
marshal-core/src/: lib.rs
marshal-core/src/decode/: depth_budget.rs  enum_helper.rs  helper.rs  mod.rs  newtype.rs  poison.rs  polonius.rs  simple.rs  struct_helper.rs  tuple_helper.rs
marshal-core/src/encode/: mod.rs  newtype.rs  poison.rs  simple.rs
marshal-core/src/parse/: depth_budget.rs  mod.rs  poison.rs  simple.rs
marshal-core/src/write/: mod.rs  simple.rs
marshal-derive/: Cargo.toml
marshal-derive/src/: deserialize.rs  deserialize_update.rs  generics.rs  lib.rs  parse_attr.rs  parsed_enum.rs  parsed_fields.rs  serialize.rs  serialize_stream.rs  serialize_update.rs
marshal-fixed/: Cargo.toml
marshal-fixed/src/: lib.rs
marshal-fixed/src/decode/: full.rs  mod.rs
marshal-fixed/src/encode/: full.rs  mod.rs
marshal-fixed/tests/: test.rs
marshal-json/: Cargo.toml
marshal-json/benches/: decode.rs
marshal-json/src/: json_object.rs  lib.rs  test.rs  value.rs
marshal-json/src/decode/: any.rs  error.rs  full.rs  mod.rs  number.rs  read.rs  string.rs  test.rs
marshal-json/src/encode/: full.rs  mod.rs  test.rs
marshal-json/src/parse/: any.rs  error.rs  full.rs  mod.rs  number.rs  read.rs  string.rs  test.rs
marshal-json/src/read/: any.rs  error.rs  full.rs  mod.rs  number.rs  read.rs  string.rs  test.rs
marshal-json/src/write/: full.rs  mod.rs  test.rs
marshal-object/: Cargo.toml
marshal-object/src/: bin_format.rs  de.rs  json_format.rs  lib.rs  ser.rs  test.rs  type_id.rs  variants.rs
marshal-object/tests/: test.rs
marshal-pointer/: Cargo.toml
marshal-pointer/src/: arc_inner.rs  arc_ref.rs  arc_weak_ref.rs  boxed.rs  empty.rs  empty_arc.rs  empty_rc.rs  flat.rs  global_uninit.rs  inner.rs  inner_macro.rs  lib.rs  raw_any.rs  raw_arc.rs  raw_count.rs  raw_rc.rs  rc_inner.rs  rc_ref.rs  rc_weak_ref.rs  rcf.rs  strong.rs  strong_ref.rs  strong_ref_macro.rs  unique.rs  unique_arc.rs  unique_rc.rs  unique_strong.rs  weak.rs  weak_ref.rs
marshal-pointer/tests/: test.rs
marshal-rson/: Cargo.toml
marshal-rson/src/: lib.rs
marshal-rson/src/decode/: full.rs  mod.rs
marshal-rson/src/encode/: full.rs  mod.rs
marshal-rson/tests/: test.rs
marshal-serde/: Cargo.toml
marshal-serde/src/: de.rs  lib.rs  ser.rs
marshal-serde/tests/: test.rs
marshal-shared/: Cargo.toml
marshal-shared/src/: de.rs  lib.rs  ser.rs
marshal-shared/tests/: test.rs
marshal-structural/: Cargo.toml
marshal-structural/src/: lib.rs  test.rs
marshal-update/: Cargo.toml
marshal-update/src/: btree_map.rs  hash_map.rs  lib.rs  map.rs  object_map.rs  prim.rs  push_vec.rs  tester.rs  version.rs
marshal-update/src/de/: boxed.rs  derive_deserialize_update_for_option.rs  mod.rs  option.rs  rc.rs  tuple.rs
marshal-update/src/forest/: address.rs  bin.rs  de.rs  error.rs  forest.rs  json.rs  mod.rs  ser.rs
marshal-update/src/ser/: boxed.rs  derive_serialize_update_for_clone.rs  mod.rs  option.rs  rc.rs  set_channel.rs  tuple.rs
marshal-update/src/tree/: bin.rs  de.rs  id.rs  json.rs  mod.rs  ser.rs
marshal-update/tests/: test.rs  test_forest.rs  test_object.rs
marshal-vu128/: Cargo.toml
marshal-vu128/src/: lib.rs  test.rs
marshal/benches/: bench.rs
marshal/src/: base64urlsafedata.rs  context.rs  lib.rs  structural.rs
marshal/src/de/: anyhow_de.rs  boxed.rs  by_address.rs  hash_map.rs  json.rs  map.rs  mod.rs  never.rs  number.rs  option.rs  rc.rs  result.rs  string.rs  tuple.rs  vec.rs
marshal/src/features/: anyhow.rs  base64urlsafedata.rs  boxed.rs  btree_map.rs  by_address.rs  hash_map.rs  mod.rs  never.rs  number.rs  option.rs  ordered_float.rs  reference.rs  result.rs  slice.rs  string.rs  time.rs  tuple.rs  vec.rs
marshal/src/parse/: mod.rs  poison.rs  simple.rs
marshal/src/parse/json/: error.rs  full.rs  string.rs  test.rs
marshal/src/ser/: anyhow_ser.rs  boxed.rs  by_address.rs  map.rs  mod.rs  never.rs  number.rs  option.rs  rc.rs  reference.rs  result.rs  slice.rs  string.rs  tuple.rs  vec.rs
marshal/src/write/: mod.rs  simple.rs
marshal/tests/: test.rs
src/: depth_budget.rs  error.rs  lib.rs  poison.rs  simple.rs
src/de/: json.rs  mod.rs  tuple.rs
src/deserialize/: json.rs  mod.rs  tuple.rs
src/json/: any.rs  error.rs  mod.rs  number.rs  read.rs  seq.rs  string.rs  test.rs  value.rs
src/parse/: depth_budget.rs  mod.rs  poison.rs  simple.rs
src/parse/json/: any.rs  error.rs  full.rs  map.rs  mod.rs  number.rs  read.rs  string.rs  test.rs  value.rs
src/text/: any.rs  bomb.rs  depth_budget.rs  error.rs  map.rs  mod.rs  number.rs  seq.rs  test.rs  value.rs
src/write/: mod.rs  simple.rs
src/write/json/: mod.rs  test.rs
