[workspace]
resolver = "2"

members = [
    "marshal",
    "marshal-benchmark",
    "marshal-bin",
    "marshal-core",
    "marshal-derive",
    "marshal-fixed",
    "marshal-json",
    "marshal-object",
    "marshal-pointer",
    "marshal-rson",
    "marshal-serde",
    "marshal-shared",
    "marshal-structural",
    "marshal-update",
    "marshal-vu128",
]

[workspace.dependencies]
marshal = { path = "marshal" }
marshal-json = { path = "marshal-json" }
marshal-bin = { path = "marshal-bin" }
marshal-core = { path = "marshal-core" }
marshal-derive = { path = "marshal-derive" }
utf8-width = "0.1.7"
base64 = "0.22.1"
itertools = "0.13.0"
anyhow = "1.0.86 "
type-map = "0.5.0"
vu128 = {git = "https://github.com/nathdobson/rust-vu128.git", rev="bbdfc5133e54dbb7e084ab1c76948a46d9519355"}
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = "2.0.66"
num-traits = "0.2.19"
num-derive = "0.4.2"
by_address = "1.2.1"
safe-once-map = { path = "../safe-once-map" }
safe-once = { path = "../safe-once" }
criterion = "0.5.1"
serde_json = "1.0.117"
catalog = {path="../catalog/catalog"}
marshal-object = {path ="marshal-object"}
weak-table= "0.3.2"
marshal-pointer = {path="marshal-pointer"}
marshal-shared = {path="marshal-shared"}
pretty_assertions = "1.4.0"
parking_lot = "0.12.3"
atomic_refcell = "0.1.13"
slab = "0.4.9"
tokenlock = "0.3.8"
lock_api = "0.4.12"
serde = "1.0.203"
base64urlsafedata = "0.5.0"
paste = "1.0.15"
marshal-vu128 = {path="marshal-vu128"}
rand = "0.8.5"
marshal-fixed = {path="marshal-fixed"}
rand_xorshift = "0.3.0"
bincode = "1.3.3"
typetag = "0.2.16"
log="0.4.22"
ordered-float = "4.2.1"

[profile.bench]
debug = true
