[package]
name = "marshal-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
vu128 = { workspace = true }
marshal-core = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
by_address = { workspace = true }
safe-once-map = { workspace = true }
safe-once = { workspace = true }
lock_api = {workspace=true}
marshal = { workspace = true }
marshal-vu128 = {workspace = true}

[dev-dependencies]
marshal-derive = { workspace = true }

