[package]
name = "marshal-object"
version = "0.1.0"
edition = "2021"

[dependencies]
marshal = {workspace=true}
catalog = {workspace=true}
anyhow= {workspace=true}
safe-once = {workspace=true}
type-map={workspace=true}

[dev-dependencies]
marshal-bin = {workspace=true}
marshal-json = {workspace=true}
