[package]
name = "marshal"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
anyhow = { workspace = true }
type-map = { workspace = true }
base64 = { workspace = true }
marshal-core = { workspace = true }
marshal-derive = {workspace=true}
marshal-pointer = {workspace=true}


[dev-dependencies]
criterion = { version = "0.5.1" }
bincode="1.3.3"
typetag = "0.2.16"
serde_json = "1.0.117"
serde="1.0.203"
rand = "0.8.5"
rand_xorshift = "0.3.0"

[[bench]]
name = "bench"
harness = false