[package]
name = "marshal"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
marshal-core = { workspace = true }
marshal-derive = {workspace=true}
marshal-pointer = {workspace=true}
base64urlsafedata = {workspace=true, optional = true}
by_address = {workspace = true, optional = true}
log = {workspace = true}

[dev-dependencies]
criterion = { workspace=true }
bincode={workspace = true}
typetag = {workspace = true}
serde_json = {workspace = true}
serde={workspace = true}
rand = {workspace = true}
rand_xorshift = {workspace = true}

[[bench]]
name = "bench"
harness = false
